[project]
name = "transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-whisper",
]

[project.scripts]
transcribe = "transcribe:main"

[tool.setuptools]
py-modules = ["transcribe"]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }

